# ros2_ws

./: propeller_control(print).py
install/: local_setup.sh  setup.sh
install/camera_publisher/lib/camera_publisher/: camera_publisher
install/camera_publisher/share/camera_publisher/: package.sh
install/digital_space/include/digital_space/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/digital_space/include/digital_space/srv/detail/: querydata__rosidl_typesupport_introspection_c.h  querydata__struct.h  querydata__struct.hpp  querydata__traits.hpp
install/digital_space/lib/digital_space/: data_collector_node.py
install/digital_space/share/digital_space/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/digital_space/share/digital_space/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  digital_spaceConfig.cmake  digital_space__rosidl_generator_cExport-noconfig.cmake  digital_space__rosidl_generator_cppExport.cmake  digital_space__rosidl_typesupport_cExport-noconfig.cmake  digital_space__rosidl_typesupport_cppExport-noconfig.cmake  digital_space__rosidl_typesupport_introspection_cExport.cmake  digital_space__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/echostick_publisher/lib/echostick_publisher/: echostick_publisher
install/echostick_publisher/share/echostick_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gps_publisher/lib/gps_publisher/: gps_publisher
install/gps_publisher/share/gps_publisher/: package.sh
install/propeller_control/lib/propeller_control/: propeller_control.py
install/propeller_control/share/ament_index/resource_index/package_run_dependencies/: propeller_control
install/propeller_control/share/propeller_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/task_manager/include/task_manager/srv/: querydata.h  querydata.hpp
install/task_manager/include/task_manager/srv/detail/: querydata__functions.c  querydata__functions.h  querydata__rosidl_typesupport_introspection_c.h  querydata__struct.h  querydata__struct.hpp  querydata__type_support.cpp  querydata__type_support.h  querydata__type_support.hpp
install/task_manager/lib/task_manager/: planning.py
install/task_manager/share/ament_index/resource_index/parent_prefix_path/: task_manager
install/task_manager/share/task_manager/: package.sh
install/task_manager/share/task_manager/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  task_managerConfig.cmake  task_manager__rosidl_generator_cExport.cmake  task_manager__rosidl_generator_cppExport.cmake  task_manager__rosidl_typesupport_cExport.cmake  task_manager__rosidl_typesupport_cppExport.cmake
install/task_manager/share/task_manager/launch/: all_node_launch.py
install/task_manager/share/task_manager/srv/: Querydata.idl  Querydata_Response.msg
src/camera_publisher/: package.xml  setup.py
src/digital_space/: CMakeLists.txt
src/echostick_publisher/: package.xml  setup.cfg  setup.py
src/gps_publisher/: package.xml  setup.py
src/propeller_control/: CMakeLists.txt
src/task_manager/: CMakeLists.txt
src/task_manager/launch/: node_before_planning_launch.py
(+1 files in other folders)
