<?xml version="1.0"?>
<package format="3">
  <name>propeller_control</name>
  <version>0.0.1</version>
  <description>A package for ROS 2 to subscribe to a custom topic and send messages over a serial port</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- If your package has a repository, include its URL here -->
  <!-- <url type="repository">URL of your repository</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- Add dependencies on message packages here -->
  <depend>std_msgs</depend>
  <!-- If you have other dependencies, list them here -->
  <depend>serial</depend> <!-- Example: dependency on a serial communication library -->

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- This tag is necessary if you're creating custom messages/services/actions -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
